deployments/epp-node-prototype/api-dummy/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-dummy
  namespace: epp
spec:
  rules:
  - host: epp-api-dummy.elifesciences.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-dummy
            port:
              number: 8080
